# DXCollections

./: CMakeLists.txt  xml.cs
Assets/shaders/: Test.hlsl
Common/: Application.cpp  Application.h  Demo.cpp  Demo.h  FBXHelper.cpp  FBXHelper.h  Globals.h  Meshes.cpp  Meshes.h  Sample.cpp  Sample.h  Sphere.cpp  Sphere.h
Source/: TestDemo.h  TestSample.h  main.cpp
